# eclipse

./: .gitignore  Cargo.toml  Eclipse.code-workspace  LICENSE  README.md  Test.bat  bacon.toml  build(Debug).bat  build.bat  nodemon.json  package-lock.json  run.sh  verride-module
compiler/: Cargo.toml
compiler/analyzer/: Cargo.sync-conflict-20250702-140003-E24J5HT.toml  Cargo.toml
compiler/analyzer/src/: lib.rs  lib.sync-conflict-20250702-140001-E24J5HT.rs  semantic.rs  semantics.rs  semantics.sync-conflict-20250702-140000-E24J5HT.rs  types.rs  types.sync-conflict-20250702-140003-E24J5HT.rs
compiler/analyzer/tests/: analyzer.rs
compiler/borrowcheck/: Cargo.toml
compiler/borrowcheck/src/: lib.rs
compiler/codegen/: Cargo.toml
compiler/codegen/src/: lib.rs
compiler/context/: Cargo.toml
compiler/context/src/: files.rs  lib.rs  resolver.rs
compiler/diagnostics/: Cargo.toml
compiler/diagnostics/src/: builder.rs  display.rs  lib.rs
compiler/lexer/: Cargo.sync-conflict-20250702-140000-E24J5HT.toml  Cargo.toml
compiler/lexer/src/: kind.rs  lib.rs  token.rs
compiler/lexer/src/reader/: comments.rs  identifier.rs  mod.rs  next.rs  number.rs  operators.rs  string.rs
compiler/lexer/tests/: lexer.rs
compiler/lowering/: Cargo.toml
compiler/lowering/src/: function.rs  lib.rs
compiler/parser/: Cargo.sync-conflict-20250702-140000-E24J5HT.toml  Cargo.toml
compiler/parser/src/: common.rs  common.sync-conflict-20250702-140003-E24J5HT.rs  imports.rs  imports.sync-conflict-20250702-140001-E24J5HT.rs  lib.rs  mod.rs  modules.rs  node.rs  node.sync-conflict-20250702-140003-E24J5HT.rs
compiler/parser/src/node/: attribute.rs  block.rs  block.sync-conflict-20250702-140000-E24J5HT.rs  condition.rs  condition.sync-conflict-20250702-140001-E24J5HT.rs  expression.rs  expression.sync-conflict-20250702-140004-E24J5HT.rs  function.rs  function.sync-conflict-20250702-140000-E24J5HT.rs  keyword.rs  mod.rs  set.rs  (+12 more)
compiler/parser/tests/: parser.rs
compiler/resolver/: Cargo.toml
compiler/resolver/src/: lib.rs
compiler/src/: build.rs  lib.rs  main.rs
compiler/src/commands/: init.rs
compiler/src/pipeline/: context.rs  mod.rs
compiler/syntax/: Cargo.toml
compiler/syntax/src/: lib.rs  operators.rs  token.rs
compiler/tests/: compiler.rs
(+379 files in other folders)
