[package]
name = "eclipse"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
    "compiler",
    "compiler/lexer",
    "compiler/parser",
    "compiler/analyzer",
    "compiler/syntax",
    "compiler/resolver",
    "compiler/context",
    "compiler/lowering",
    "compiler/borrowcheck",
    "compiler/diagnostics",
    "compiler/codegen",
    "cli",
    "lsp",
    "common",
]

[dependencies]
