[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
lexer = { path = "./lexer" }
parser = { path = "./parser" }
analyzer = { path = "./analyzer" }
resolver = { path = "./resolver" }
context = { path = "./context" }
lowering = { path = "./lowering" }
diagnostics = { path = "../diagnostics" }
common = { path = "../common" }
