[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
lexer = { path = "./lexer" }
parser = { path = "./parser" }
analyzer = { path = "./analyzer" }
resolver = { path = "./resolver" }
borrowcheck = { path = "./borrowcheck" }
context = { path = "./context" }
lowering = { path = "./lowering" }
codegen = { path = "./codegen" }
diagnostics = { path = "./diagnostics" }
common = { path = "../common" }
